# kucharka

./: .fit-pages.yml  .gitlab-ci.yml  Makefile  README.md  build-html.sh  build-pdf.sh  build.sh
.github/workflows/: build-publish.yml  build-test.yml  build.yml  push-dev.yml
animace/: .gitignore  fanim.py  pyproject.toml
animace/merge_sort/: merge_sort.py
animace/tests/: test.py
src/: Rakefile  Woofile  _build-docker.sh  _build-html.sh  _build-pdf.sh  build.sh  chapter1.woo  chapter2.woo.ignore  chapter3.woo  chapter3.woo.ignore  chapter4.woo.ignore  chapter5.woo  chapter6.woo  datastructures.woo  fiksarka.woo  geometrie.woo  intro-to-algorithms.woo  intro.woo  mnoziny.woo  references.bib  uvod-do-grafu.woo  vyhledavaci-algoritmy.woo
src/templates/: cp-templates.sh
src/templates/fiks-html/: tasks.rb
src/templates/fiks-html/css/: highlight-dark.css  highlight.css
src/templates/fiks-html/erb/: Chapter.html.erb  Exercise.html.erb  Lemma.html.erb  Observation.html.erb  Section.html.erb  Solution.html.erb  Subsection.html.erb  Warning.html.erb  _menu.html.erb  _navbar.html.erb  _scripts.html.erb  equation.html.erb  full_reference.html.erb  image.html.erb  notion.html.erb  paragraph.html.erb  small.html.erb  table.html.erb  text_stub.html.erb
src/templates/fiks-html/js/: custom.js
src/templates/fit-anki/: helpers.rb  tasks.rb
src/templates/fit-anki/erb/: Algorithm.html.erb  Chapter.html.erb  README.md  (+39 more)
src/templates/fit-html/: helpers.rb  tasks.rb
src/templates/fit-knowledge/: graph.py  helpers.rb  tasks.rb
src/templates/fit-pdf/: helpers.rb  tasks.rb
(+111 files in other folders)
