[tool.poetry]
name = "fiksarka-anim"
version = "0.1.0"
description = "Animace pro FIKS kuchařku"
authors = ["Bertik23 <bertikxxiii@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
manim = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
